--- a/client/src/styles/app.scss
+++ b/client/src/styles/app.scss
@@ -5,5 +5,8 @@
 @import './components/fonts.scss';
 
 @import './components/default.scss';
+@import './components/typo.scss';
 @import './components/buttons.scss';
 @import './components/forms.scss';
+
+@import './templates/mocks.scss';
