New look for project

--- a/client/src/styles/components/buttons.scss
+++ b/client/src/styles/components/buttons.scss
@@ -54,10 +54,14 @@ a.btn {
 }
 
 .btn-primary {
-    @include button-variant(#0011cc, #fff, #0011cc);
+    @include button-variant(#fff, #78909c, transparent);
+}
+
+.btn-back {
+    color: $dark-500;
 }
 
 .btn-md {
     min-width: 150px;
-    @include button-size(5px, 10px, em(16), 1.2, 3px);
+    @include button-size(20px, 60px, em(24), 1.2, 3px);
 }
