--- a/client/src/styles/components/ui.scss
+++ b/client/src/styles/components/ui.scss
@@ -5,6 +5,7 @@ $dark-100: #999;
 $dark-500: #1e1e1e;
 $dark-700: #000;
 $light: #fff;
+$blue-light: #e3f2fd;
 
 $default-text-color: $primary-color;
 $text-color: $dark-500;
