--- a/client/src/styles/components/forms.scss
+++ b/client/src/styles/components/forms.scss
@@ -7,18 +7,24 @@ $form-control-md: 250px;
 
     &.form-control-holder-md {
         width: auto;
+        min-width: 70%;
+        height: 200px;
+        margin-bottom: 20px;
     }
 }
 
 .form-control {
-    padding: 5px 15px 5px 5px;
-    color: $dark-500;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 5px 10px 0;
+    color: #78909c;
     font-size: em(16);
     line-height: 1.4;
-
-    &.form-control-md {
-        min-width: $form-control-md;
-        min-height: 100px;
+    
+    &.simplified {
+        font-weight: 500;
+        border: none;
     }
 }
 
