--- a/client/src/styles/components/mixins.scss
+++ b/client/src/styles/components/mixins.scss
@@ -1,6 +1,13 @@
 $browser-context: 16;
 
-
+@mixin font-face($name, $file-name, $font-weight:400, $font-style:normal) {
+    @font-face {
+        font-family: $name;
+        src: url('#{$path-fonts}#{$file-name}.woff') format('woff');
+        font-weight: $font-weight;
+        font-style: $font-style;
+    }
+}
 
 @function str-replace($string, $search, $replace: "") {
     $index: str-index($string, $search);
@@ -10,33 +17,6 @@ $browser-context: 16;
     }
 
     @return $string;
-}
-
-@mixin font-face($name, $path, $weight: null, $style: null, $exts: eot woff2 woff ttf svg) {
-    $src: null;
-
-    $extmods: (
-        eot: "?",
-        svg: "#" + str-replace($name, " ", "_")
-    );
-
-    $formats: (
-        otf: "opentype",
-        ttf: "truetype"
-    );
-
-    @each $ext in $exts {
-        $extmod: if(map-has-key($extmods, $ext), $ext + map-get($extmods, $ext), $ext);
-        $format: if(map-has-key($formats, $ext), map-get($formats, $ext), $ext);
-        $src: append($src, url(quote($path + "." + $extmod)) format(quote($format)), comma);
-    }
-
-    @font-face {
-        font-family: quote($name);
-        font-style: $style;
-        font-weight: $weight;
-        src: $src;
-    }
 }
 
 @function em($pixels, $context: $browser-context) {
