--- a/client/src/styles/templates/mocks.scss
+++ b/client/src/styles/templates/mocks.scss
@@ -1,5 +1,42 @@
+.mock-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form-holder {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+}
+
+.mock-link-holder {
+    width: 100%;
+    text-align: center;
+}
+
 .substrate {
     display: block;
-    width: 100%;
     cursor: pointer;
+}
+
+.mock-single-wrapper {
+    display: flex;
+    flex-direction: column;
+
+    .text-content {
+        padding: 10px;
+        font-size: em(18);
+        cursor: pointer;
+    }
+
+    .btn-back {
+        margin: 0 0 0 auto;
+        padding: 5px 10px;
+
+        span {
+            padding-left: 5px;
+        }
+    }
 }
